--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<link rel="stylesheet" href="css/index.css">
 		
 		<!-- Adding the Favicon to Website -->
-			<link rel="icon" href="images/websitelogo.PNG">
+			<link rel="icon" href="images/websitelogo.png">
 		
 		<!-- Adding Different Font Styles from Google Fonts -->
 			<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
 	</head>						
 	
 	<body class="body">	
-		<img class="gear1" src="images/gears.PNG" alt="gears-img">
+		<img class="gear1" src="images/gears.png" alt="gears-img">
 		
 		<div class="intro">
 			<h1 class="name">I am Mugunthan Udayan.</h1>
@@ -30,31 +30,31 @@
 			</em>
 		</div>
 		
-		<img class="gear2" src="images/gears.PNG" alt="gears-img">
-		<img class="lasercuttingmachine" src="images/laser-cutting-machine.PNG" alt="laser-cutting-machine-img"><br>
-		<img class="displaypic" src="images/mugunthan.JPG" alt="mugunthan-img" title="Mugunthan's Image">
+		<img class="gear2" src="images/gears.png" alt="gears-img">
+		<img class="lasercuttingmachine" src="images/laser-cutting-machine.png" alt="laser-cutting-machine-img"><br>
+		<img class="displaypic" src="images/mugunthan.JPEG" alt="mugunthan-img" title="Mugunthan's Image">
 		<p class="aboutme"><strong>a Master's Degree holder with following skillsets,</strong></p>
 		
 		<div class="skillset1">
-			<img class="CAD" src="images/CAD.PNG" alt="CAD-img">
+			<img class="CAD" src="images/CAD.png" alt="CAD-img">
 			<h2>Computer Aided Design</h2>
 			<p>More than five years of experience in Computer Aided Design. An expert in CAD tools such as Solidworks, PTC Creo, Autodesk Inventor, Siemens NX and Catia.</p>
 		</div>
 		
 		<div class="skillset2">
-			<img class="CAM" src="images/CAM.PNG" alt="CAM-img">
+			<img class="CAM" src="images/CAM.png" alt="CAM-img">
 			<h2>Computer Aided Machining</h2>
 			<p>An expert in using CAM tools such as MasterCAM, MakerBot and Solidworks CAM. Hands-on experience in writing manual g-code programs, operating 3-axis CNC milling machine, FDM and SLA 3D printers.</p>
 		</div>
 		
 		<div class="skillset3">
-			<img class="FEA" src="images/FEA.PNG" alt="fea-img">
+			<img class="FEA" src="images/FEA.png" alt="fea-img">
 			<h2>Finite Element Analysis</h2>
 			<p>An expert in using FEA tools such as ANSYS, ABAQUS and Hyperworks. Hands-on experience in performing finite element analysis on various mechanical components to study stress-strain relationship, fatigue analysis etc.</p>
 		</div>
 		
 		<div class="skillset4">
-			<img class="CFD" src="images/CFD.PNG" alt="CFD-img">
+			<img class="CFD" src="images/CFD.png" alt="CFD-img">
 			<h2>Computational Fluid Dynamics</h2>
 			<p>Hands-on experience and academice experience in conducting computational fluid dynamics analysis.</p>
 		</div>
