--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		
 		<img class="gear2" src="images/gears.png" alt="gears-img">
 		<img class="lasercuttingmachine" src="images/laser-cutting-machine.png" alt="laser-cutting-machine-img"><br>
-		<img class="displaypic" src="images/mugunthan.JPEG" alt="mugunthan-img" title="Mugunthan's Image">
+		<img class="displaypic" src="images/mugunthan.jpg" alt="mugunthan-img" title="Mugunthan's Image">
 		<p class="aboutme"><strong>a Master's Degree holder with following skillsets,</strong></p>
 		
 		<div class="skillset1">
