--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</div>
 		
 		<div class="resume">
-			<a href="./cv/mugunthan-cv.pdf" target="_blank"><img class="CV" src="images/CV.PNG" alt="CV-img"></a>
+			<a href="./cv/mugunthan-cv.pdf" target="_blank"><img class="CV" src="images/CV.png" alt="CV-img"></a>
 			<h2>Curriculum Vitae</h2>
 			<p>Click on the image to check out Mugunthan Udayan's <a class="vitae" href="./cv/mugunthan-cv.pdf" target="_blank">Curriculum Vitae</a>!</p>
 		</div>
